docs: README 최신화 - Phase 5 성능 최적화 반영
- 주요 기능에 검색, 일시정지/재개, 타이머, 모범답안 추가
- 기술 스택에 React Query 추가
- 면접 API에 search, pause, resume 엔드포인트 추가
- 성능 최적화 요약 테이블 (10항목) 추가
- k6 시나리오 3종 실행 명령어 추가
- 개발 로드맵 Phase 5 완료 체크, Phase 6 배포 추가
- 기술적 도전에 성능 최적화 8항목 추가
- 아키텍처 다이어그램 Redis 연결 수정

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>